added theme and changed minor things

--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
   <head>
     <title>Christian Simmons's Website</title>
     <meta charset="utf-8">
-    <link href= css/csim.css rel="stylesheet">
+    <link href= css/main.css rel="stylesheet">
     <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
     </script>
     <![endif]-->
   </head>
   <body class="front">
-    <header>
-      <h1>Christian Simmons</h1>
-    </header>
+    <a href="http://www.simmonschristianr.com" id="logo"><img src="christiansimmons.png" alt="Christian Simmons"></a>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -21,20 +19,18 @@
       </ul>
     </nav>
     <main>
-      <h2>
-        Christian Simmons
-      </h2>
-      <h3>
-        Mathematics and Data Science
-      </h3>
       <p>
-        This is my website, I built it myself and it contains everything on my resume plus a little more.
+        This is my website, I built it myself and it contains everything on my resume plus a little more. &nbsp;
+        <img src="file.jpg" alt="Christian Simmons" id="headshot">
+        <br>
+        It was built using:
+        <ul>
+          <li>HTML and CSS</li>
+          <li>Github for hosting and updating</li>
       </p>
-      <div>
-      </div>
     </main>
       <br><br>
-      <footer>
+      <footer id="foot">
         <a href="mailto:csim@iastate.edu">csim@iastate.edu</a><br>
         138 Gray Ave<br>
         Ames, IA 50014<br>
