removed footer background and made it a bit cleaner

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </p>
     </main>
       <br><br>
-      <footer id="foot">
+      <footer>
         <a href="mailto:csim@iastate.edu">csim@iastate.edu</a><br>
         138 Gray Ave<br>
         Ames, IA 50014<br>
