--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="resume.html">Resume</a></li>
+        <li><a href="ChristianSimmonsResume.pdf" id="resume-link" target="_blank">Resume</a>
         <li><a href="about.html">About</a></li>
       </ul>
     </nav>
