--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135344506-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-135344506-1');
+  </script>
     <title>Christian Simmons's Website</title>
     <meta charset="utf-8">
     <link href= css/main.css rel="stylesheet">
@@ -15,7 +24,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="ChristianSimmonsResume.pdf" id="resume-link" target="_blank">Resume</a>
-        <li><a href="about.html">About</a></li>
+        <li><a href="bio.html">Bio</a></li>
       </ul>
     </nav>
     <main>
