--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
     <![endif]-->
   </head>
   <body class="front">
-    <a href="http://www.simmonschristianr.com" id="logo"><img src="christiansimmons.gif" alt="Christian Simmons"></a>
+    <a href="http://www.simmonschristianr.com" id="logo"><img src="logo.png" alt="Christian Simmons"></a>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
