--- a/en/portfolio.html
+++ b/en/portfolio.html
@@ -10,37 +10,36 @@
 
       gtag('config', 'UA-135344506-1');
     </script>
-    <link rel="images/apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="images/icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="images/icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="images/manifest" href="/site.webmanifest">
-    <link rel="images/mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="../images/apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="../images/icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="../images/icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="../images/manifest" href="/site.webmanifest">
+    <link rel="../images/mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <title>Christian Simmons's Website</title>
     <meta charset="utf-8">
-    <link href= css/main.css rel="stylesheet">
+    <link href= ../css/main.css rel="stylesheet">
     <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
     </script>
     <![endif]-->
   </head>
   <body class="front">
-    <a href="http://www.simmonschristianr.com" id="logo"><img src="images/logo.png" alt="Christian Simmons"></a>
+    <a href="http://www.simmonschristianr.com" id="logo"><img src="../images/logo.png" alt="Christian Simmons"></a>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="ChristianSimmonsResume.pdf" id="resume-link" target="_blank">Resume</a></li>
+        <li><a href="../ChristianSimmonsResume.pdf" id="resume-link" target="_blank">Resume</a></li>
         <li><a href="bio.html">Bio</a></li>
-        <li><a href="en/portfolio.html">EN</a> | <a href="fr/portfolio.html">FR</a></li>
+        <li><a href="portfolio.html">EN</a> | <a href="../fr/portfolio.html">FR</a></li>
+
       </ul>
     </nav>
     <main>
       <p>
         <div class="portdesc">
           <ul class="portlist">
-            <li>This website</li>
-          </ul>
         </div>
       </p>
     </main>
