--- a/portfolio.html
+++ b/portfolio.html
@@ -20,6 +20,7 @@
     <title>Christian Simmons's Website</title>
     <meta charset="utf-8">
     <link href= css/main.css rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
     </script>
     <![endif]-->
