--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,8 @@
         simmonschristianr@gmail.com<br>
         138 Gray Ave<br>
         Ames, IA 50014<br>
-        563-528-3835
+        <a id="mobile" href="tel:563-528-3835">563 528 3835</a>
+        <span id="desktop">563 528 3835</span>
       </p>
     </div>
     </main>
